## Process this file with automake to produce Makefile.in

AM_CPPFLAGS    = -I$(top_srcdir) -I$(top_builddir)
AM_CPPFLAGS   += -I$(top_builddir)/lib -I$(top_srcdir)/lib
AM_LDFLAGS     =
bin_PROGRAMS   = # Append below
check_PROGRAMS = # Append below
CLEANFILES     = # Append below

noinst_HEADERS = p3dfft_d.h p3dfft_s.h

# Required for AX_AM_MACROS
@INC_AMINCLUDE@
