## Process this file with automake to produce Makefile.in

postprocdir       = $(pkgdatadir)/postproc
postproc_SCRIPTS  = channel.m
postproc_SCRIPTS += datatimes.sh
postproc_SCRIPTS += frame.sh
postproc_SCRIPTS += gb2ge.m
postproc_SCRIPTS += gb.py
postproc_SCRIPTS += gplot
postproc_SCRIPTS += orderest
postproc_SCRIPTS += plan_suzerain.py
postproc_SCRIPTS += plot_blparam.py
postproc_SCRIPTS += plot_stats.py
postproc_SCRIPTS += plot_status.py
postproc_SCRIPTS += reacting_summary.py
postproc_SCRIPTS += relam.bl
postproc_SCRIPTS += remove_hdf5.py
postproc_SCRIPTS += rename_hdf5.py
postproc_SCRIPTS += select_files.py
postproc_SCRIPTS += sgr2suz.py
postproc_SCRIPTS += spectra.py
postproc_SCRIPTS += stationary.bl
postproc_SCRIPTS += summary_surf.py

# Required for AX_AM_MACROS
@INC_AMINCLUDE@
